# RUST-WASM-RPC-PROJECT

./: .gitignore  Cargo.toml  readme.md
bins/native_linux/: server_1024
bins/replacing/: bin_server
bins/wlinux/: server_1024
filler/: Cargo.toml
filler/src/: client_shmem.rs  filler.rs  native_verification.rs  wasm_processor.rs  wasm_processor_native.rs  wasm_processor_wasm3.rs  wasm_processor_wasmtime.rs  wasm_processor_wasmtime_module_replace.rs
interconnect/: Cargo.toml
interconnect/src/: lib.rs
main-app/: Cargo.toml
main-app/111/: wasm_processor_native.rs  wasm_processor_wasm3.rs  wasm_processor_wasmtime_module_replace.rs
main-app/src/: client_shmem.rs  main.rs  main111.rs  native_verification.rs  native_verification_ecdsa.rs  native_verification_schoor.rs  redis.rs  wasm_processor_native.rs  wasm_processor_wasm3.rs  wasm_processor_wasmtime.rs  wasm_processor_wasmtime_module_replace.rs
module3_bkp/: Cargo.toml
module3_bkp/src/: lib.rs
modules/module1/: Cargo.toml
modules/module2/: Cargo.toml
modules/module3/: Cargo.toml
modules/module3/src/: lib.rs
modules/module4/: Cargo.toml
modules/module4/src/: lib.rs
modules/module5/: Cargo.toml
modules/module5/src/: lib.rs
modules/module6/: Cargo.toml
modules/module6/src/: lib.rs
proc2/: Cargo.toml
proc2/src/: main.rs
proc2/tokio_ipc/: Cargo.toml
proc2/tokio_ipc/src/: main.rs
proto/: server_client.proto
server/: .gitignore  Cargo.toml  file1  memshare
server/src/: lib.rs  main.rs
server/src/connection_processor/: mod.rs  server_connection_processing.rs  shmem_server.rs
shmem-structs/: Cargo.toml
shmem-structs/src/: lib.rs
wasm-core/: Cargo.toml
wasm-core/lib_moses/src/: lib.rs
wasm-core/wapc/: Cargo.toml  README.md
wasm-core/wasm3_runner/: Cargo.toml
wasm-core/wasm3_runner/examples/: wasm3-demo.rs
