[workspace]
members = [
	"main-app",
	"wasm-core",
	"modules/*",
	"interconnect",
	"filler"
]

exclude = ["./test_systemd","./filler","./server"]
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
strip = "debuginfo"

[profile.dev]
opt-level = 0
debug = true
codegen-units = 8
split-debuginfo = "unpacked"
