[workspace]
members = [
	"main-app",
	"wasm-core",
	"modules/*",
	"interconnect",
	"shmem-structs",
	"filler"
]

exclude = ["./test_systemd","./filler","./server","module3_bkp","/proc2"]
[profile.release]
panic = 'abort'
codegen-units = 16
opt-level = 'z'
lto = true
strip = "debuginfo"

[profile.dev]
opt-level = 0
debug = true
codegen-units = 8
split-debuginfo = "unpacked"
