[workspace]
members = [
	"main-app",
	"wasm-core",
	"modules/*",
	"interconnect",
	"shmem-structs",
	"server"
]

exclude = ["./test_systemd","./filler","./server","module3_bkp","/proc2"]

[workspace.dependencies]

shared_memory = "0.12.4"
prost = "0.11.8"
prost-types = "0.11.8"
tonic = "0.8.3"
serde = {version = "1.0.159",features =["derive"]}
serde_with = "2.3.2"
shmem-structs = {path="./shmem-structs"}
wasm-core= { path= "./wasm-core"}
wapc-codec = {path = "./wasm-core/wapc-codec"}
wapc = {path = "./wasm-core/wapc"}
interconnect = {path= "./interconnect"}
wasmtime_runner = {path = "./wasm-core/wasmtime_runner"}
wasm3_runner = {path = "./wasm-core/wasm3_runner"}
[profile.release]
panic = 'abort'
opt-level = 3
lto = true #link-time-opt
codegen-units = 16 # faster, but less opt
strip = "debuginfo"

[profile.dev]
opt-level = 0
debug = true
codegen-units = 1
split-debuginfo = "unpacked"
