[package]
name = "filler"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "bin_filler"
path = "src/filler.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-slice = "0.1.4"
prost = "0.11.8"
prost-types = "0.11.8"
smallvec = "1.10.0"
tokio = { version = "1.27.0", features = ["macros", "full"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }
tonic = "0.8.3"
random-string = "1.0.0"
random_name_generator = "0.3.4"

[build-dependencies]
tonic-build = "0.8.3"
