[package]
name = "filler"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "bin_filler"
path = "src/filler.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-slice = "0.1.4"
prost = "0.11.8"
prost-types = "0.11.8"
smallvec = "1.10.0"
tokio = { version = "1.27.0", features = ["macros", "full"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }
tonic = "0.8.3"
random-string = "1.0.0"
random_name_generator = "0.3.4"
shared_memory = "0.12.4"
project-root = "0.2.2"
serde = {version = "1.0.159",features =["derive"]}
bincode = "1.3.3"
serde_with = "2.3.2"
shmem-structs = {path="../shmem-structs"}
log = "0.4.17"
env_logger = "0.10.0"
wasm-core= { path= "../wasm-core"}
wapc-codec = {path = "../wasm-core/wapc-codec"}
wapc = {path = "../wasm-core/wapc"}
interconnect = {path= "../interconnect"}
wasmtime_runner = {path = "../wasm-core/wasmtime_runner"}
hex = "0.4.3"
crossbeam = {version = "0.8.2"}
crossbeam-channel = "0.5.7"
crossbeam-queue = "0.3.8"
k256 = {version = "0.13.1", default-features=false,features = ["ecdsa","sha256","schnorr"]}
rand_core = {version = "0.6.4", features = ["getrandom"]}
base64 = "0.21.0"
[build-dependencies]
tonic-build = "0.8.3"
