[package]
name = "main-app"
version = "0.1.0"
edition = "2021"
authors = ["Alex Vdovydchenko <keromvp@gmail.com>"]
description = "main application to generate and verify messages"
license = "Apache-2.0"
keywords = ["wapc", "webassembly", "wasm", "wasmtime","rpc"]

[[bin]]
name = "bin_main"
path = "src/main.rs"


[dependencies]
shared_memory = {workspace=true}
prost = {workspace=true}
prost-types = {workspace=true}
tonic = {workspace=true}
tokio = { version = "1.27.0", features = ["macros", "full"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }
project-root = "0.2.2"
serde = {workspace = true}
serde_with = {workspace = true}
bincode = "1.3.3"
log = "0.4.17"
env_logger = "0.10.0"
shmem-structs = {workspace = true}
wasm-core= {workspace = true}
wapc-codec = {workspace = true}
wapc = {workspace = true}
interconnect = {workspace = true}
wasmtime_runner = {workspace = true}
wasm3_runner = {workspace = true}
hex = "0.4.3"
crossbeam = {version = "0.8.2"}
crossbeam-channel = "0.5.7"
k256 = {version = "0.13.1", default-features=false,features = ["ecdsa","sha256","schnorr"]}
rand_core = {version = "0.6.4"}
#rand_core = {version = "0.6.4", features = ["getrandom"]}
console = "0.15.5"
structopt = "0.3.26"
random_name_generator = "0.3.4"
ecdsa = {version = "0.16.6", features = ["verifying","alloc","serde"]}
[build-dependencies]
tonic-build = "0.8.3"
[profile.release]
panic = 'abort'
opt-level = 3
lto = true #link-time-opt
codegen-units = 8 
strip = "debuginfo"
