cargo-features = ["per-package-target"]
[package]
name = "module3-hash"
version = "0.1.0"
authors = ["Alex Vdovydchenko <keromvp@gmail.com>"]
edition = "2021"
resolver = "2"
forced-target = "wasm32-unknown-unknown"
[lib]
crate-type = ["cdylib"]

[dependencies]
wapc-guest = { path = "../../wasm-core/wapc-guest" }
wapc-codec = { path = "../../wasm-core/wapc-codec" }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = { version = "1.0", optional = true }
interconnect = {path="../../interconnect"}
aes-gcm = {version = "0.10.1", features = ["heapless"]}
getrandom = { version = "0.2"  }
#getrandom = { version = "0.2" ,features = ["js"] }
#wasm-bindgen = "0.2.84"
[profile.release]
opt-level = "s"
lto = true
