[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Alex Vdovydchenko <keromvp@gmail.com>"]
description = "server application to sign a message"
license = "Apache-2.0"

[[bin]]
name = "bin"
path = "src/main.rs"

[lib]
name = "lib_common_server"
path = "./src/lib.rs"

[dependencies]
prost = "0.11.8"
prost-types = "0.11.8"
tonic = "0.8.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
futures = "0.3.28"
random_name_generator = "0.3.3"
tracing-appender = "0.2.2"
tokio = { version = "1.27.0", features = ["macros", "full"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }
anyhow = "1.0.68"
shared_memory = "0.12.4"
project-root = "0.2.2"
serde = {version = "1.0.159",features =["derive"]}
bincode = "1.3.3"
serde_with = "2.3.2"
shmem-structs = {path="../shmem-structs"}
hex = "0.4.3"
k256 = {version = "0.13.1", default-features=false,features = ["ecdsa","sha256","schnorr"]}
base64 = "0.21.0"
[build-dependencies]
tonic-build = "0.8.3"
prost-build = "0.11.8"

[dev-dependencies]
anyhow = "1.0.68"
rstest = "0.17.0"
mockall = "0.11.4"
num = "0.4.0"
thiserror = "1.0.38"

[profile.release]
panic = 'abort'
opt-level = 2
lto = true #link-time-opt
codegen-units = 16 
strip = "debuginfo"

