[package]
name = "shmem-structs"
version = "0.1.0"
authors = ["Alex Vdovydchemko <keromvp@gmail.com>"]

description = "common data structures"
license = "Apache-2.0"
[lib]
name = "libshmem"
path = "./src/lib.rs"

[dependencies]
serde = {version = "1.0.159",features =["derive"]}
bincode = "1.3.3"
serde_with = "2.3.2"
