[package]
name = "wasm-core"
version = "0.1.0"
authors = ["Alex Vdovydchenko <keromvp@gmail.com>"]
description = "modular RPC (WASM) cypher library"
license = "Apache-2.0"
keywords = ["wapc", "webassembly", "wasm", "wasmtime","rpc"]

[lib]
name = "libmoses"
path = "./lib_moses/src/lib.rs"

[dependencies]
wapc-codec = { path = "./wapc-codec" }
wapc = { path = "./wapc" }
wasmtime_runner = {path = "./wasmtime_runner"}
wasm3_runner = {path ="./wasm3_runner"}
hex = "0.4.3"
anyhow = "1.0.70"
serde = { version = "1.0", features = ["derive"] }
