cargo-features = ["per-package-target"]
[package]
name = "module2-hash"
version = "0.1.0"
authors = ["Jarrod Overson <jsoverson@gmail.com>"]
edition = "2021"
forced-target = "wasm32-unknown-unknown"
[lib]
crate-type = ["cdylib"]

[dependencies]
wapc-guest = { path = "../../wasm-core/wapc-guest" }
wapc-codec = { path = "../../wasm-core/wapc-codec" }

serde = { version = "1.0", features = ["derive"] }
rmp-serde = { version = "1.0", optional = true }

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
