cargo-features = ["per-package-target"]
[package]
name = "module5-verify"
version = "0.1.0"
authors = ["Alex Vdovydchenko <keromvp@gmail.com>"]
edition = "2021"
resolver = "2"
forced-target = "wasm32-unknown-unknown"
[lib]
crate-type = ["cdylib"]

[dependencies]
wapc-guest = { path = "../../wasm-core/wapc-guest" }
wapc-codec = { path = "../../wasm-core/wapc-codec" }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = { version = "1.0", optional = true }
interconnect = {path="../../interconnect"}
k256 = {version = "0.13.1", default-features=false,features = ["ecdsa","sha256","schnorr"]}
hex = "0.4.3"
[profile.release]
opt-level = "s"
lto = true
