[package]
name = "tokio_ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["macros", "full"] }
tokio-serde = "0.8.0"
tokio-util = {version="0.7.7",features=["codec"]}
